FDS-533: Update navigation structure > Fix spacing to first level elements in navbar
FDS-534: Fix alignment between navbar first level elements

--- a/packages/cascara/src/structures/AdminStructure/AdminStructure.module.scss
+++ b/packages/cascara/src/structures/AdminStructure/AdminStructure.module.scss
@@ -73,6 +73,7 @@ $border: 1px solid rgba(0, 0, 0, 0.15);
   grid-row: main;
   grid-column-start: main;
   grid-column-end: drawer;
+  margin: 0em 2em;
 
   &.with_drawer {
     grid-column-end: main;
@@ -81,6 +82,13 @@ $border: 1px solid rgba(0, 0, 0, 0.15);
 
 ._nav {
   @include scroll-vertical;
+  min-width: 300px;
   // background-color: purple;
   grid-area: nav;
+  grid-row: nav;
+
+  grid-column-start: nav;
+
+  grid-column-end: nav;
+  margin-right: 1em;
 }
